# full-stack-fastapi-deta

./: .env.sample  .gitignore  .sample.env  .settings.sample  README.md  lint.sh  pyproject.toml
backend/: main.py  requirements.txt  utils.py
backend/core/: api.py  config.py  crud.py  deps.py  security.py
backend/schemas/: __init__.py  user.py
backend/users/: __init__.py  api.py  crud.py
backend/users/api_v1/: endpoints.py
tests/: conftest.py  test_core.py
tests/api/api_v1/: test_core.py  test_users.py
tests/crud/: test_user.py
tests/utils/: user.py  utils.py
