[tool.poetry]
name = "app"
version = "2020.12.1"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
emails = "^0.5.15"
pydantic = {extras = ["email", "dotenv"], version = "^1.7.3"}
Jinja2 = "^2.11.2"
deta = "^0.7"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
vulture = "^2.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

